LibLSLCC/Parser/LSLParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.5.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Parser\LSL.g4 by ANTLR 4.5.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591

namespace LibLSLCC.Parser {
using System;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.5.1")]
[System.CLSCompliant(false)]
public partial class LSLParser : Parser {
	public const int
		TYPE=1, DO=2, IF=3, ELSE=4, WHILE=5, FOR=6, DEFAULT=7, STATE=8, RETURN=9, 
		JUMP=10, ID=11, HEX_LITERAL=12, INT=13, FLOAT=14, QUOTED_STRING=15, SEMI_COLON=16, 
		EQUAL=17, LOGICAL_EQUAL=18, LOGICAL_NOT_EQUAL=19, LESS_THAN=20, GREATER_THAN=21, 
		LESS_THAN_EQUAL=22, GREATER_THAN_EQUAL=23, RIGHT_SHIFT=24, LEFT_SHIFT=25, 
		RIGHT_SHIFT_EQUAL=26, LEFT_SHIFT_EQUAL=27, MINUS=28, PLUS=29, MINUS_EQUAL=30, 
		PLUS_EQUAL=31, INCREMENT=32, DECREMENT=33, MUL=34, DIV=35, MOD=36, MUL_EQUAL=37, 
		DIV_EQUAL=38, MOD_EQUAL=39, COMMA=40, O_PAREN=41, C_PAREN=42, O_BRACE=43, 
		C_BRACE=44, O_BRACKET=45, C_BRACKET=46, LABEL_PREFIX=47, BITWISE_OR=48, 
		BITWISE_AND=49, BITWISE_NOT=50, BITWISE_XOR=51, LOGICAL_NOT=52, LOGICAL_AND=53, 
		LOGICAL_OR=54, DOT=55, Whitespace=56, Newline=57, BlockComment=58, LineComment=59;
	public const int
		RULE_vectorLiteral = 0, RULE_rotationLiteral = 1, RULE_functionDeclaration = 2, 
		RULE_codeScopeOrSingleBlockStatement = 3, RULE_elseIfStatement = 4, RULE_elseStatement = 5, 
		RULE_ifStatement = 6, RULE_controlStructure = 7, RULE_codeScope = 8, RULE_doLoop = 9, 
		RULE_whileLoop = 10, RULE_forLoop = 11, RULE_loopStructure = 12, RULE_codeStatement = 13, 
		RULE_expressionStatement = 14, RULE_returnStatement = 15, RULE_labelStatement = 16, 
		RULE_jumpStatement = 17, RULE_stateChangeStatement = 18, RULE_localVariableDeclaration = 19, 
		RULE_globalVariableDeclaration = 20, RULE_expressionListTail = 21, RULE_expressionList = 22, 
		RULE_expression = 23, RULE_optionalExpressionList = 24, RULE_optionalParameterList = 25, 
		RULE_listLiteral = 26, RULE_compilationUnit = 27, RULE_parameterDefinition = 28, 
		RULE_parameterList = 29, RULE_eventHandler = 30, RULE_definedState = 31, 
		RULE_defaultState = 32;
	public static readonly string[] ruleNames = {
		"vectorLiteral", "rotationLiteral", "functionDeclaration", "codeScopeOrSingleBlockStatement", 
		"elseIfStatement", "elseStatement", "ifStatement", "controlStructure", 
		"codeScope", "doLoop", "whileLoop", "forLoop", "loopStructure", "codeStatement", 
		"expressionStatement", "returnStatement", "labelStatement", "jumpStatement", 
		"stateChangeStatement", "localVariableDeclaration", "globalVariableDeclaration", 
		"expressionListTail", "expressionList", "expression", "optionalExpressionList", 
		"optionalParameterList", "listLiteral", "compilationUnit", "parameterDefinition", 
		"parameterList", "eventHandler", "definedState", "defaultState"
	};

	private static readonly string[] _LiteralNames = {
		null, null, "'do'", "'if'", "'else'", "'while'", "'for'", "'default'", 
		"'state'", "'return'", "'jump'", null, null, null, null, null, "';'", 
		"'='", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'>>'", "'<<'", "'>>='", 
		"'<<='", "'-'", "'+'", "'-='", "'+='", "'++'", "'--'", "'*'", "'/'", "'%'", 
		"'*='", "'/='", "'%='", "','", "'('", "')'", "'{'", "'}'", "'['", "']'", 
		"'@'", "'|'", "'&'", "'~'", "'^'", "'!'", "'&&'", "'||'", "'.'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "TYPE", "DO", "IF", "ELSE", "WHILE", "FOR", "DEFAULT", "STATE", 
		"RETURN", "JUMP", "ID", "HEX_LITERAL", "INT", "FLOAT", "QUOTED_STRING", 
		"SEMI_COLON", "EQUAL", "LOGICAL_EQUAL", "LOGICAL_NOT_EQUAL", "LESS_THAN", 
		"GREATER_THAN", "LESS_THAN_EQUAL", "GREATER_THAN_EQUAL", "RIGHT_SHIFT", 
		"LEFT_SHIFT", "RIGHT_SHIFT_EQUAL", "LEFT_SHIFT_EQUAL", "MINUS", "PLUS", 
		"MINUS_EQUAL", "PLUS_EQUAL", "INCREMENT", "DECREMENT", "MUL", "DIV", "MOD", 
		"MUL_EQUAL", "DIV_EQUAL", "MOD_EQUAL", "COMMA", "O_PAREN", "C_PAREN", 
		"O_BRACE", "C_BRACE", "O_BRACKET", "C_BRACKET", "LABEL_PREFIX", "BITWISE_OR", 
		"BITWISE_AND", "BITWISE_NOT", "BITWISE_XOR", "LOGICAL_NOT", "LOGICAL_AND", 
		"LOGICAL_OR", "DOT", "Whitespace", "Newline", "BlockComment", "LineComment"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "LSL.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public LSLParser(ITokenStream input)
		: base(input)
	{
		Interpreter = new ParserATNSimulator(this,_ATN);
	}
	public partial class VectorLiteralContext : ParserRuleContext {
		public ExpressionContext vector_x;
		public IToken comma_one;
		public ExpressionContext vector_y;
		public IToken comma_two;
		public ExpressionContext vector_z;
		public ITerminalNode LESS_THAN() { return GetToken(LSLParser.LESS_THAN, 0); }
		public ITerminalNode GREATER_THAN() { return GetToken(LSLParser.GREATER_THAN, 0); }
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public ITerminalNode[] COMMA() { return GetTokens(LSLParser.COMMA); }
		public ITerminalNode COMMA(int i) {
			return GetToken(LSLParser.COMMA, i);
		}
		public VectorLiteralContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_vectorLiteral; } }
		public override void EnterRule(IParseTreeListener listener) {
			ILSLListener typedListener = listener as ILSLListener;
			if (typedListener != null) typedListener.EnterVectorLiteral(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ILSLListener typedListener = listener as ILSLListener;
			if (typedListener != null) typedListener.ExitVectorLiteral(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILSLVisitor<TResult> typedVisitor = visitor as ILSLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVectorLiteral(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VectorLiteralContext vectorLiteral() {
		VectorLiteralContext _localctx = new VectorLiteralContext(Context, State);
		EnterRule(_localctx, 0, RULE_vectorLiteral);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 66; Match(LESS_THAN);
			State = 67; _localctx.vector_x = expression(0);
			State = 68; _localctx.comma_one = Match(COMMA);
			State = 69; _localctx.vector_y = expression(0);
			State = 70; _localctx.comma_two = Match(COMMA);
			State = 71; _localctx.vector_z = expression(0);
			State = 72; Match(GREATER_THAN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RotationLiteralContext : ParserRuleContext {
		public ExpressionContext rotation_x;
		public IToken comma_one;
		public ExpressionContext rotation_y;
		public IToken comma_two;
		public ExpressionContext rotation_z;
		public IToken comma_three;
		public ExpressionContext rotation_s;
		public ITerminalNode LESS_THAN() { return GetToken(LSLParser.LESS_THAN, 0); }
		public ITerminalNode GREATER_THAN() { return GetToken(LSLParser.GREATER_THAN, 0); }
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public ITerminalNode[] COMMA() { return GetTokens(LSLParser.COMMA); }
		public ITerminalNode COMMA(int i) {
			return GetToken(LSLParser.COMMA, i);
		}
		public RotationLiteralContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_rotationLiteral; } }
		public override void EnterRule(IParseTreeListener listener) {
			ILSLListener typedListener = listener as ILSLListener;
			if (typedListener != null) typedListener.EnterRotationLiteral(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ILSLListener typedListener = listener as ILSLListener;
			if (typedListener != null) typedListener.ExitRotationLiteral(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILSLVisitor<TResult> typedVisitor = visitor as ILSLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRotationLiteral(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RotationLiteralContext rotationLiteral() {
		RotationLiteralContext _localctx = new RotationLiteralContext(Context, State);
		EnterRule(_localctx, 2, RULE_rotationLiteral);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 74; Match(LESS_THAN);
			State = 75; _localctx.rotation_x = expression(0);
			State = 76; _localctx.comma_one = Match(COMMA);
			State = 77; _localctx.rotation_y = expression(0);
			State = 78; _localctx.comma_two = Match(COMMA);
			State = 79; _localctx.rotation_z = expression(0);
			State = 80; _localctx.comma_three = Match(COMMA);
			State = 81; _localctx.rotation_s = expression(0);
			State = 82; Match(GREATER_THAN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionDeclarationContext : ParserRuleContext {
		public IToken return_type;
		public IToken function_name;
		public IToken open_parenth;
		public OptionalParameterListContext parameters;
		public IToken close_parenth;
		public CodeScopeContext code;
		public ITerminalNode ID() { return GetToken(LSLParser.ID, 0); }
		public ITerminalNode O_PAREN() { return GetToken(LSLParser.O_PAREN, 0); }
		public OptionalParameterListContext optionalParameterList() {
			return GetRuleContext<OptionalParameterListContext>(0);
		}
		public ITerminalNode C_PAREN() { return GetToken(LSLParser.C_PAREN, 0); }
		public CodeScopeContext codeScope() {
			return GetRuleContext<CodeScopeContext>(0);
		}
		public ITerminalNode TYPE() { return GetToken(LSLParser.TYPE, 0); }
		public FunctionDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionDeclaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			ILSLListener typedListener = listener as ILSLListener;
			if (typedListener != null) typedListener.EnterFunctionDeclaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ILSLListener typedListener = listener as ILSLListener;
			if (typedListener != null) typedListener.ExitFunctionDeclaration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILSLVisitor<TResult> typedVisitor = visitor as ILSLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunctionDeclarationContext functionDeclaration() {
		FunctionDeclarationContext _localctx = new FunctionDeclarationContext(Context, State);
		EnterRule(_localctx, 4, RULE_functionDeclaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 85;
			_la = TokenStream.La(1);
			if (_la==TYPE) {
				{
				State = 84; _localctx.return_type = Match(TYPE);
				}
			}

			State = 87; _localctx.function_name = Match(ID);
			State = 88; _localctx.open_parenth = Match(O_PAREN);
			State = 89; _localctx.parameters = optionalParameterList();
			State = 90; _localctx.close_parenth = Match(C_PAREN);
			State = 91; _localctx.code = codeScope();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CodeScopeOrSingleBlockStatementContext : ParserRuleContext {
		public CodeScopeContext code;
		public CodeStatementContext statement;
		public CodeScopeContext codeScope() {
			return GetRuleContext<CodeScopeContext>(0);
		}
		public CodeStatementContext codeStatement() {
			return GetRuleContext<CodeStatementContext>(0);
		}
		public CodeScopeOrSingleBlockStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_codeScopeOrSingleBlockStatement; } }
		public override void EnterRule(IParseTreeListener listener) {
			ILSLListener typedListener = listener as ILSLListener;
			if (typedListener != null) typedListener.EnterCodeScopeOrSingleBlockStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ILSLListener typedListener = listener as ILSLListener;
			if (typedListener != null) typedListener.ExitCodeScopeOrSingleBlockStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILSLVisitor<TResult> typedVisitor = visitor as ILSLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCodeScopeOrSingleBlockStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CodeScopeOrSingleBlockStatementContext codeScopeOrSingleBlockStatement() {
		CodeScopeOrSingleBlockStatementContext _localctx = new CodeScopeOrSingleBlockStatementContext(Context, State);
		EnterRule(_localctx, 6, RULE_codeScopeOrSingleBlockStatement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 95;
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				{
				State = 93; _localctx.code = codeScope();
				}
				break;
			case 2:
				{
				State = 94; _localctx.statement = codeStatement();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
